--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To_Do_List</title>
     <link rel = "stylesheet" href = "index.css">
-    <script src = "main.js"></script>
     <script src="https://kit.fontawesome.com/6903d9d306.js"></script>
 </head>
 <body>
@@ -16,14 +15,15 @@
             <input type = "text" placeholder="Enter here....." class = "items">
             <button class = "add"><i class = "fas fa-plus"></i></button>
         </div>
-         <div class ="Unknown Area">
+         <div class ="unknown_Area">
 
          </div>
-         <div class = "btn" align = "center" onlick = "removeAll()">Remove All</div>
+         <div class = "btn" align = "center" onclick = "removeAll()">Remove All</div>
 
 
 
     </div>
-    
+    <script src = "main.js"></script>
+
 </body>
 </html>
